--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
 
-    <title>Jane Doe | Portfolio</title>
+    <title>Jonathan Jones | Portfolio</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -56,24 +56,16 @@
     <header class="masthead bg-primary text-white text-center">
         <div class="container">
             <img class="img-fluid mb-5 d-block mx-auto rounded-circle" src="assets/img/jane.jpg" alt="" />
-            <h1 class="mb-0">Hi, I'm Jane!</h1>
+            <h1 class="mb-0">Data Analytics Enthusiast</h1>
             <hr />
             <h2 class="mb-0">
-                Web Developer - User Experience Designer - JavaScript
-                Enthusiast
+                Experience: Excel VBA, Python, SQL, JavaScript
+                
             </h2>
 
             <!-- Replace this text with your brand statement or other short text about you. -->
             <p class="brand-statement">
-                I'm a brand statement - Lorem ipsum dolor sit amet,
-                consectetur adipiscing elit. Curabitur dignissim efficitur
-                congue. Vestibulum vestibulum sit amet magna sit amet
-                maximus. Praesent viverra ut massa vitae condimentum. Nulla
-                condimentum eros vitae semper sagittis. Donec quis neque at
-                risus luctus pulvinar. Curabitur enim sem, sodales eget nisi
-                non, euismod tempor quam. Fusce est tortor, condimentum
-                porttitor ligula sit amet, fermentum vestibulum sem. Vivamus
-                venenatis felis ac fringilla viverra.
+                
             </p>
         </div>
     </header>
@@ -279,7 +271,7 @@
 
     <div class="copyright py-4 text-center text-white">
         <div class="container">
-            <small>Copyright &copy; Jane Doe 2019-2020</small>
+            <small>Copyright &copy; Jonathan Jones 2021</small>
         </div>
     </div>
 
