--- a/index.html
+++ b/index.html
@@ -204,32 +204,22 @@
             <div class="credential">
                 <h2 class="location mb-0">
                     Vanderbilt University |
-                    <span class="credential-date text-muted">Jan 2019 - July 2019</span>
+                    <span class="credential-date text-muted">Feb 2022</span>
                 </h2>
-                <p class="lead">Full-stack Web Development Certificate</p>
+                <p class="lead">Data Analytics Boot Campe</p>
                 <p class="credential-description">
-                    Web development is a high-growth career track, and
-                    Vanderbilt University Coding Boot Camp teaches you the
-                    specialized skills for full-stack web development.
-                    Through a fast-paced, immersive curriculum, you’ll learn
-                    in-demand front-end and back-end technologies.
+                    Boot Camp certificate of completion.
                 </p>
             </div>
             <hr class="credential-divider" />
             <div class="credential">
                 <h2 class="location mb-0">
-                    University of North Carolina |
-                    <span class="credential-date text-muted">Aug 2010 - May 2015</span>
+                    Vanderbilt University |
+                    <span class="credential-date text-muted">May 1998</span>
                 </h2>
-                <p class="lead">B.A. Art History</p>
+                <p class="lead">M.S. Mechanical Engineering</p>
                 <p class="credential-description">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    Cras non dictum justo. Donec sagittis ipsum a odio
-                    dignissim varius. Nam vitae lectus diam. Etiam efficitur
-                    venenatis quam, vitae semper justo ornare id. Sed sed
-                    posuere lorem, vitae porttitor augue. Sed sagittis
-                    sapien mauris, at varius arcu egestas ut. Praesent
-                    egestas metus id dui ultrices tincidunt.
+                   
                 </p>
             </div>
             <hr class="credential-divider" />
@@ -245,7 +235,7 @@
                         Connect with Me
                     </h2>
                     <p class="text-uppercase mb-4">
-                        myverycoolemail@gmail.com
+                        jj2773@outlook.com
                     </p>
                     <ul class="list-inline mb-0">
                         <li class="list-inline-item">
